--- a/src/locales/messages.hi.json
+++ b/src/locales/messages.hi.json
@@ -3,6 +3,10 @@
     "translations": {
       "i18nlogo": "यह i18n छवि है",
       "8319803481649412831": "Angular i18n एप्लिकेशन में आपका स्वागत है",
+      "3114928174548054702": "भंडार: {$ICU}",
+    "7032966666653095420": "{VAR_PLURAL, plural, =0 {शून्य} =1 {लंबे समय तक नहीं टिकेगा} =2 {लंबे समय तक नहीं टिकेगा} few {सीमित} other {पर्याप्त}}",
+      "1093385495604437563": "उत्पाद को इस प्रकार मूल्यांकित किया गया है : ({$ICU})",
+      "7022696840347012521": "{VAR_SELECT, select, 1 {घटिया} 2 {संतोषजनक} 3 {अच्छा} 4 {बहुत अच्छा} 5 {उत्कृष्ट}}",
       "productTitle": "शीर्षक",
       "7681699300014797061": "कीमत",
       "6604153755411656739": "रेटिंग",
